--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -65,7 +65,7 @@ span:hover, span:visited, span:link, span:active {
 }
 
 .btn-default:hover {
-    color: #B57FDC;
+    color: #BEBEBE;
 }
 
 btn-default::before {
@@ -86,8 +86,16 @@ btn-default::before {
     text-decoration: none;
 }
 
-.projects h1{
+
+
+.projects h1,
+.skills h1, .about h1{
     font-size: 10rem;
-    color: #707070
+    color: #707070;
+    opacity: .1;
+}
+
+.skills-info h3, p {
+    color: #bebebe
 }
 
