--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -46,7 +46,7 @@ span:hover, span:visited, span:link, span:active {
     text-decoration: none;
 }
 
-.text a:hover::before {
+.text a:hover::before, btn-default::before {
     height: 100%;
     text-decoration: none;
 }
@@ -68,18 +68,18 @@ span:hover, span:visited, span:link, span:active {
     color: #BEBEBE;
 }
 
-btn-default::before {
-    content: "";
-    background-color: #48cfad;
-    position: absolute;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 0;
-    z-index: -1;
-    transition: .5s;
-    text-decoration: none;
-}
+/*btn-default::before {*/
+/*    content: "";*/
+/*    background-color: #48cfad;*/
+/*    position: absolute;*/
+/*    left: 0;*/
+/*    top: 0;*/
+/*    width: 100%;*/
+/*    height: 0;*/
+/*    z-index: -1;*/
+/*    transition: .5s;*/
+/*    text-decoration: none;*/
+/*}*/
 
 .btn-default:hover::before {
     height: 100%;
@@ -93,9 +93,17 @@ btn-default::before {
     font-size: 10rem;
     color: #707070;
     opacity: .1;
+    margin-bottom: -50px;
 }
 
 .skills-info h3, p {
     color: #bebebe
 }
 
+.about img {
+    position:relative;
+    margin-top: -30px;
+    margin-left: -100px;
+    transform: translateX(-50%);
+    z-index: -1;
+}
