--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -88,8 +88,98 @@ span:hover, span:visited, span:link, span:active {
 
 .about img {
     position:relative;
-    margin-top: -30px;
+    margin-top: -100px;
     margin-left: -100px;
     transform: translateX(-50%);
     z-index: -1;
+
 }
+/*.scroll {*/
+/*    !*content: "";*!*/
+/*    position: fixed;*/
+/*    bottom: 0;*/
+/*    right: 0;*/
+/*    font-size: 4rem;*/
+/*    padding: 0px 10px;*/
+/*    border-radius: 10px 0 0 0;*/
+/*    background-color: #181818;*/
+/*}*/
+
+div.scroll {
+    position: relative;
+    float: right;
+    width: 3rem;
+    height: 3rem;
+    box-sizing: border-box;
+    transform: translate(-50%, -50%);
+}
+
+.scroll span{
+    display: block;
+    width: 30px;
+    height: 30px;
+    border-bottom: 5px solid #06A8FF;
+    border-right: 5px solid #06A8FF;
+    transform: rotate(45deg);
+    margin: -10px;
+    animation: animate 2s infinite;
+}
+.scroll span:nth-child(2){
+    animation-delay: -0.2s;
+}
+.scroll span:nth-child(3){
+    animation-delay: -0.4s;
+}
+
+@keyframes animate {
+    0%{
+        opacity: 0;
+        transform: rotate(45deg) translate(-20px,-20px);
+    }
+    50%{
+        opacity: 1;
+    }
+    100%{
+        opacity: 0;
+        transform: rotate(45deg) translate(20px,20px);
+    }
+}
+
+/*div.scroll::before {*/
+/*    content: "";*/
+/*    width: 100%;*/
+/*    height: 100%;*/
+/*    border-width: .6rem .6rem 0 0;*/
+/*    border-style: solid;*/
+/*    border-color: #48cfad;*/
+/*    transition: .08s ease;*/
+/*    display: block;*/
+/*    transform-origin: 100% 20%;*/
+/*}*/
+
+/*div.scroll::after {*/
+/*    content: "";*/
+/*    float:right;*/
+/*    position: relative;*/
+/*    top: -100%;*/
+/*    width: 100%;*/
+/*    height: 100%;*/
+/*    border-width: 0 .6rem 0 0;*/
+/*    border-style: solid;*/
+/*    border-color: #48cfad;*/
+/*    transition: .2s ease;*/
+/*    display: block;*/
+/*    transform-origin: 100% 0;*/
+/*}*/
+
+
+/*div.scroll:hover::after {*/
+/*    transform: rotate(45deg);*/
+/*    border-color: #48cfad;*/
+/*    height: 120%*/
+/*}*/
+
+/*div.scroll:hover::before {*/
+/*    border-color: #48cfad;*/
+/*    transform: scale(.9);*/
+/*}*/
